[Style]: 코드 포매팅 정리
컨벤션에 따라 코드 포매팅 정리